--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
          <li> Vagrant </li>
          <li> Docker </li>
          <li> Ansible </li>
-         <li> Integración continua: Madurez y Productividad de Sofware </li>
+         <li> Integración continua</li>
          <li>Cubernetes</li>     
      </ul>
 </body>
